# diskspace_report

./: README.md  pyproject.toml  setup.cfg  setup.py
diskspace-report/: config.py  requirements.txt
diskspace_report/: __init__.py  diskspace_report.py  requirements.txt
diskspace_report/pkg_helpers/: config.py
