[project]
name = "Diskspace Report"
version = "0.2.7"
authors = [
  { name="Andreas Paeffgen", email="author@example.com" },
]
description = "A script that writes diskspace usage to a csv file. The report can be emailed as well"
long_description='Check the available disk space and write it to a csv file. Eventually email the csv file.'
long_description_content_type="text/markdown"
readme = "README.md"
requires-python = ">=3.6"

[tool.setuptools]
packages = ["diskspace_report", "config_report"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/apaeffgen/diskspace_report"
Issues = "https://github.com/apaeffgen/diskspace_report/issues"



[build-system]
requires =[
"setuptools>=69",
"wheel”
]
build-backend = "setuptools.build_meta”

