[metadata]
name = Diskspace_Report
version = 0.0.1
author = Andreas Paeffgen
author_email = YOUR_EMAIL
description = Check the available disk space and write it to a csv file. Eventually email the csv file.
long_description = file: README.md
long_description_content_type = text/markdown
url = GITHUB REPOSITORY LINK
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.7
include_package_data = True